objects/IAM_Application__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>Text(IAM_Account_Name__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Activated_By__c</fullName>
        <label>Activated_By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMI_ApproverLink__c</fullName>
        <formula>$Label.CMI_CustomerApproval_Link</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMI_ApproverLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_CDA_Status__c</fullName>
        <label>CDA_Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Customer Request</fullName>
                    <default>true</default>
                    <label>New Customer Request</label>
                </value>
                <value>
                    <fullName>Sent to Customer</fullName>
                </value>
                <value>
                    <fullName>Signed by Customer</fullName>
                </value>
                <value>
                    <fullName>No CDA Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMI_ConnectedSol_Link__c</fullName>
        <formula>$Label.CMI_ConnectedSol_Link</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMI_ConnectedSol_Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_CumminsEnginesLink__c</fullName>
        <formula>$Label.CMI_Cummins_Engines</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMI_CumminsEngines_Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Cumminslogo_Link__c</fullName>
        <formula>$Label.CMI_Cumminslogo_Link</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMI_Cumminslogo_Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Customer_Equipment_Group__c</fullName>
        <label>Customer Equipment Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Email_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Response Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMI_Indemnified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indemnified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMI_InviteUserPage_Link__c</fullName>
        <formula>$Label.CMI_InviteUserPage_Link</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMI_InviteUserPage_Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Moratorium_End_Date__c</fullName>
        <label>Moratorium End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMI_Moratorium_Start_Date__c</fullName>
        <label>Moratorium Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMI_Moratorium__c</fullName>
        <label>Moratorium</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMI_Moratoriumcal__c</fullName>
        <formula>CMI_Moratorium_End_Date__c - CMI_Moratorium_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Moratoriumcal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMI_OtherTsp_Link__c</fullName>
        <formula>$Label.CMI_OtherTsp_Link</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMI_OtherTsp_Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Other_Fault_Notifications_Email__c</fullName>
        <label>Other Fault Notification Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Other_Fault_Notifications__c</fullName>
        <label>Other Fault Notifications</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OnCommand</fullName>
                </value>
                <value>
                    <fullName>Saucon TDS Fault Code Response Interface</fullName>
                </value>
                <value>
                    <fullName>No System</fullName>
                    <default>true</default>
                    <label>No System</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMI_Other_TSP__c</fullName>
        <label>Other TSP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Request_withdrawn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request withdrawn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMI_Service_Now__c</fullName>
        <label>Service Now</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No delay</fullName>
                </value>
                <value>
                    <fullName>1 hour</fullName>
                </value>
                <value>
                    <fullName>4 hours</fullName>
                </value>
                <value>
                    <fullName>8 hours</fullName>
                </value>
                <value>
                    <fullName>12 hours</fullName>
                </value>
                <value>
                    <fullName>1 day</fullName>
                </value>
                <value>
                    <fullName>2 days</fullName>
                </value>
                <value>
                    <fullName>3 days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMI_Service_Soon__c</fullName>
        <label>Service Soon</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No delay</fullName>
                </value>
                <value>
                    <fullName>1 hour</fullName>
                </value>
                <value>
                    <fullName>4 hours</fullName>
                </value>
                <value>
                    <fullName>8 hours</fullName>
                </value>
                <value>
                    <fullName>12 hours</fullName>
                </value>
                <value>
                    <fullName>1 day</fullName>
                </value>
                <value>
                    <fullName>2 days</fullName>
                </value>
                <value>
                    <fullName>3 days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMI_Stop_Now__c</fullName>
        <label>Stop Now</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No delay</fullName>
                </value>
                <value>
                    <fullName>1 hour</fullName>
                </value>
                <value>
                    <fullName>4 hours</fullName>
                </value>
                <value>
                    <fullName>8 hours</fullName>
                </value>
                <value>
                    <fullName>12 hours</fullName>
                </value>
                <value>
                    <fullName>1 day</fullName>
                </value>
                <value>
                    <fullName>2 days</fullName>
                </value>
                <value>
                    <fullName>3 days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMI_Telematics_Service_Provider__c</fullName>
        <label>Telematics Service Provider</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Eye</fullName>
                </value>
                <value>
                    <fullName>clever devices</fullName>
                </value>
                <value>
                    <fullName>Cummins-ETD</fullName>
                </value>
                <value>
                    <fullName>DriverTech</fullName>
                </value>
                <value>
                    <fullName>Geotab</fullName>
                </value>
                <value>
                    <fullName>KomtraxPlus</fullName>
                </value>
                <value>
                    <fullName>Microlise</fullName>
                </value>
                <value>
                    <fullName>omnitracs</fullName>
                </value>
                <value>
                    <fullName>OnCommand  Link</fullName>
                </value>
                <value>
                    <fullName>PACCAR Solutions</fullName>
                </value>
                <value>
                    <fullName>peoplenet</fullName>
                </value>
                <value>
                    <fullName>RoadAdvisor</fullName>
                </value>
                <value>
                    <fullName>Saucon</fullName>
                </value>
                <value>
                    <fullName>Shaw Tracking</fullName>
                </value>
                <value>
                    <fullName>The Free Connected Diagnostics Pilot</fullName>
                </value>
                <value>
                    <fullName>zonar</fullName>
                </value>
                <value>
                    <fullName>Other TSP</fullName>
                </value>
                <value>
                    <fullName>Traffilog</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMI_Urgent_Fault_Notification_Email__c</fullName>
        <label>Urgent Fault Notification Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMI_Urgent_Fault_Notification__c</fullName>
        <label>Urgent Fault Notification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Saucon TDS Fault Code Response Interface</fullName>
                </value>
                <value>
                    <fullName>OnCommand</fullName>
                </value>
                <value>
                    <fullName>No System</fullName>
                    <default>true</default>
                    <label>No System</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMI_UserRegister_Link__c</fullName>
        <formula>$Label.CMI_UserRegister_Link</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMI_UserRegister_Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_signedByEmail__c</fullName>
        <label>Agreement_SignedByEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMI_signedByTitle__c</fullName>
        <label>Agreement_SignedByTitle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_signedBy__c</fullName>
        <label>Agreement_SignedBy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_signedOn__c</fullName>
        <label>Agreement_SignedOn</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Account_Customer_Code__c</fullName>
        <formula>IAM_Account_Name__r.IAM_Service_Provider_Code__c</formula>
        <label>Account Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is for Sharing purpose</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Features &amp; Access</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IAM_Account_Source__c</fullName>
        <formula>TEXT(IAM_Account_Name__r.AccountSource)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Application_Name__c</fullName>
        <label>Application Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guidanz</fullName>
                </value>
                <value>
                    <fullName>EDS</fullName>
                </value>
                <value>
                    <fullName>INSITE</fullName>
                </value>
                <value>
                    <fullName>Cummins Service Training</fullName>
                </value>
                <value>
                    <fullName>QuickServe Online</fullName>
                </value>
                <value>
                    <fullName>India ABO</fullName>
                </value>
                <value>
                    <fullName>Repair logistics and Service</fullName>
                </value>
                <value>
                    <fullName>CUMPAS 2.0</fullName>
                </value>
                <value>
                    <fullName>Marketplace</fullName>
                </value>
                <value>
                    <fullName>Connected Solutions</fullName>
                </value>
                <value>
                    <fullName>WWSPS</fullName>
                </value>
                <value>
                    <fullName>Identity and Access Management</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile</fullName>
                </value>
                <value>
                    <fullName>Fleetguard FIT</fullName>
                </value>
                <value>
                    <fullName>NextGen</fullName>
                </value>
                <value>
                    <fullName>Rapid Serve Web</fullName>
                </value>
                <value>
                    <fullName>DBU EFSR</fullName>
                </value>
                <value>
                    <fullName>BOX External Partners</fullName>
                </value>
                <value>
                    <fullName>Mexico Warranty</fullName>
                </value>
                <value>
                    <fullName>Archer</fullName>
                </value>
                <value>
                    <fullName>Electrified Powertrain Specification Tool</fullName>
                </value>
                <value>
                    <fullName>PowerSpec</fullName>
                </value>
                <value>
                    <fullName>Field Test Guidanz Mobile</fullName>
                </value>
                <value>
                    <fullName>Fluids Registration</fullName>
                </value>
                <value>
                    <fullName>FluidWatch</fullName>
                </value>
                <value>
                    <fullName>HighRadius</fullName>
                </value>
                <value>
                    <fullName>My Fleetguard Customer Portal</fullName>
                </value>
                <value>
                    <fullName>Shop Cummins Online Store</fullName>
                </value>
                <value>
                    <fullName>FT - NPBU Diagnostics</fullName>
                </value>
                <value>
                    <fullName>Global Dealer Portal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Approver_URL__c</fullName>
        <formula>$Label.IAM_Adminlogin_Link</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Assigned_Units__c</fullName>
        <description>It is the total units assigned to the user.</description>
        <label>Assigned Units</label>
        <summarizedField>IAM_Contact_Provisioning__c.IAM_Assigned_Units__c</summarizedField>
        <summaryForeignKey>IAM_Contact_Provisioning__c.IAM_Account_Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IAM_Care_Service_Level__c</fullName>
        <label>Care Service Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RLS</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Cummins_Customer_Id__c</fullName>
        <externalId>true</externalId>
        <label>Cummins Customer Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IAM_Cumpas_Dist_CS_Rep__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Distributor CS Respresentative</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Features &amp; Access (Distributor CS Respresentative)</relationshipLabel>
        <relationshipName>Account_Features_Access1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IAM_Cumpas_Distributor_Sales_Rep__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Distributor Sales Representative</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Features &amp; Access</relationshipLabel>
        <relationshipName>Account_Features_Access</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IAM_Cumpas_Modularity__c</fullName>
        <description>this field give what modular level this account have access to</description>
        <label>Modules</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>View Credit</fullName>
                </value>
                <value>
                    <fullName>Core Returns</fullName>
                </value>
                <value>
                    <fullName>Core Swap</fullName>
                </value>
                <value>
                    <fullName>Parts Order</fullName>
                </value>
                <value>
                    <fullName>Parts Inquiry</fullName>
                </value>
                <value>
                    <fullName>Price Extract</fullName>
                </value>
                <value>
                    <fullName>Core Credits</fullName>
                </value>
                <value>
                    <fullName>Core Return</fullName>
                </value>
                <value>
                    <fullName>Parts Ordering</fullName>
                </value>
                <value>
                    <fullName>Parts Validation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Cumpas_Roles__c</fullName>
        <description>this field defines what roles should be assigned to the users in that particular location</description>
        <label>Cumpas Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Distributor Admin</fullName>
                </value>
                <value>
                    <fullName>Dealer Admin</fullName>
                </value>
                <value>
                    <fullName>End User (Dealer User)</fullName>
                </value>
                <value>
                    <fullName>Vendor User</fullName>
                </value>
                <value>
                    <fullName>Distributor Sales Representative</fullName>
                </value>
                <value>
                    <fullName>Distributor Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Distributor Customer Support Representative</fullName>
                </value>
                <value>
                    <fullName>Distributor Customer Support Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Customer_Care_Email__c</fullName>
        <formula>$Label.IAM_Customer_Care_Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IAM Customer Care Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Free_Subscription__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Not a Subscribed Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_From_JIT_Execution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is for IAM Purpose and is used to know if Contact got created as apart of JIT implementation or not.</description>
        <label>From JIT Execution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Guidanz_Mobile_Roles__c</fullName>
        <description>Field is Mainly used to display Guidanz mobile roles</description>
        <label>Guidanz Mobile Roles</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>IAM_Application_Name__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Beta Testing Guidanz Mobile</fullName>
                </value>
                <value>
                    <fullName>Field Test CalAssist Units Guidanz Mobile</fullName>
                </value>
                <value>
                    <fullName>Field Test CMP Guidanz Mobile</fullName>
                </value>
                <value>
                    <fullName>Field Test IAS Guidanz Mobile</fullName>
                </value>
                <value>
                    <fullName>Field Test Intapp OEM Units Guidanz Mobile</fullName>
                </value>
                <value>
                    <fullName>Field Test Intapp Units Guidanz Mobile</fullName>
                </value>
                <value>
                    <fullName>Field Test Power Plus Lite Guidanz Mobile</fullName>
                </value>
                <value>
                    <fullName>Field Test PS PRO Guidanz Mobile</fullName>
                </value>
                <value>
                    <fullName>Field Test SRV Guidanz Mobile</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile CalAssist Units</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Campaign Dealer</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Campaign Distributor</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Campaign Employee</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Campaign Enduser</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Immediate Assessment Dealer</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Immediate Assessment Distributor</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Immediate Assessment Employee</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Immediate Assessment Fleet</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Intapp OEM Units</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Intapp Units</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Registered Dealer</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Registered Distributor</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Registered Employee</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Registered Enduser</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Registered Fleet</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Service Dealer</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Service Distributor</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Service Employee</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile User</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_InviteUser_URL__c</fullName>
        <formula>$Label.IAM_InviteUserURL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IAM_InviteUser_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_License_Type__c</fullName>
        <label>License Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_NpbuDiagExpire__c</fullName>
        <description>It stores subscription and its expiration date format for subscribed and admin managed NPBU Diagnostics app.</description>
        <label>NPBU Diagnostics Expiration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_OSM_Backend_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSM Backend Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Phone__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Primary_Contact_Email_del__c</fullName>
        <label>Primary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IAM_Provisioned_Count__c</fullName>
        <label>Provisioned Count</label>
        <summaryFilterItems>
            <field>IAM_Contact_Provisioning__c.IAM_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>IAM_Contact_Provisioning__c.IAM_Account_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IAM_Provisioned_User_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Provisioned User Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IAM_QSOL_Version__c</fullName>
        <label>QSOL Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Qsolexpiration__c</fullName>
        <label>QSOL Expiration</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Qsolview__c</fullName>
        <label>IAM Qsolview</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Reason__c</fullName>
        <label>User Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Reject_Reason__c</fullName>
        <label>IAM Reject Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription Revoked</fullName>
                </value>
                <value>
                    <fullName>Subscription Cancelled</fullName>
                </value>
                <value>
                    <fullName>Cancellation Comments</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Subscription Expired</fullName>
                </value>
                <value>
                    <fullName>Subscription Request Rejected</fullName>
                </value>
                <value>
                    <fullName>Requested Removal</fullName>
                </value>
                <value>
                    <fullName>No Longer at Location</fullName>
                </value>
                <value>
                    <fullName>Wrong product ordered</fullName>
                </value>
                <value>
                    <fullName>Person not authorized to place order</fullName>
                </value>
                <value>
                    <fullName>Duplicate order</fullName>
                </value>
                <value>
                    <fullName>Person no longer at location</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Remaining_Units__c</fullName>
        <description>It is the count left after assigning to users.</description>
        <formula>IAM_Total_Units__c -  IAM_Assigned_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>